[package]
name = "tonic-sample"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.13.5"
tokio = { version = "1.44.0", features = ["full"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tonic-web = "0.12.3"
tower-http = { version = "0.6.2", features = ["cors"] }

[build-dependencies]
tonic-build = "0.12.3"
